add demo skeleton to w4d2

--- a/lecture-notes/week-4/d2-element-selection/create-el-demo/index.html
+++ b/lecture-notes/week-4/d2-element-selection/create-el-demo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<script src="./index.js"></script>
+	<script src="./your-code.js"></script>
 	
 	<title>Element Creation</title>
 </head>
