--- a/lecture-notes/week-4/d2-element-selection/update-el-demo/index.html
+++ b/lecture-notes/week-4/d2-element-selection/update-el-demo/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-	<script src="./index.js"></script>
+	<script src="./your-code.js"></script>
 	<title>Updating Elements</title>
 </head>
 
-<body>
+<body id="body">
 
 	<header id="my-header">
 		<h1>Hello World</h1>
