--- a/lecture-notes/week-4/d2-element-selection/select-el-demo/index.html
+++ b/lecture-notes/week-4/d2-element-selection/select-el-demo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<script async defer src="./index.js"></script>
+	<script src="./your-code.js"></script>
 	<title>Element Selection</title>
 </head>
 <body>
