--- a/lecture-notes/week-4/d3-event-handling/common-events-demo/index.html
+++ b/lecture-notes/week-4/d3-event-handling/common-events-demo/index.html
@@ -48,15 +48,15 @@
 			<ul id="options">
 				<li>
 					<label>Mushrooms</label>
-					<input id="mushroom" class="checkbox" type="checkbox" data-price="2">
+					<input id="mushroom" type="checkbox" data-price="2">
 				</li>
 				<li>
 					<label>Pepperoni</label>
-					<input id="pepperoni" class="checkbox" type="checkbox" data-price="3">
+					<input id="pepperoni" type="checkbox" data-price="3">
 				</li>
 				<li>
 					<label>Jalapeno</label>
-					<input id="jalapeno" class="checkbox" type="checkbox" data-price="1">
+					<input id="jalapeno" type="checkbox" data-price="1">
 				</li>
 			</ul>
 	
