create solution for d4 warmup

--- a/practices/week-4/d4-warmup-event-handling/index.html
+++ b/practices/week-4/d4-warmup-event-handling/index.html
@@ -2,17 +2,20 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="./index.css">
-	<script src="./your-code.js"></script>
+	<script src="./solution.js"></script>
 	<title>JS Events Warmup</title>
 </head>
 <body>
-	<h1>Todo List</h1>
-	<ul id="todo-list"></ul>
-
+	<h1>Todo List App</h1>
 	<section>
-		<label>Enter a new todo below!</label>
-		<input type="text" id="user-input" value="I need to...">
+		<h2>Your Items:</h2>
+		<ul id="todo-list"></ul>
 	</section>
+
+	<form id="todo-form">
+		<input type="text" id="user-input" placeholder="Enter a new todo item...">
+		<button>Add Todo</button>
+	</form>
 	
 </body>
 </html>
