update dom demo

--- a/week-4/d1-browser-basics/lecture-notes/script-demo/index.html
+++ b/week-4/d1-browser-basics/lecture-notes/script-demo/index.html
@@ -3,6 +3,7 @@
 <head>
 	<script type="text/javascript" src="index.js"></script>
 
+	<!-- SOLUTION #4: use async defer to delay execution-->
 	<!-- <script async defer type="text/javascript" src="index.js"></script> -->
 
 
@@ -17,11 +18,9 @@
 	</ul>
 </body>
 
+<!-- SOLUTION #1: place script below html it is dependent on-->
 <!-- <script type="text/javascript" src="index.js"></script> -->
 
-<!-- <script>
-	console.log('this runs after the DOM loads')
-	console.log(document.getElementById('body').id)
-</script> -->
+
 
 </html>
