--- a/week-4/d1-browser-basics/lecture-notes/dom-demo/index.html
+++ b/week-4/d1-browser-basics/lecture-notes/dom-demo/index.html
@@ -5,7 +5,8 @@
 	<title>DOM DEMO</title>
 </head>
 <body>
-	<h1>Document Object Model</h1>
+	<h1 id="header">Document Object Model</h1>
+	
 	<ul id="my-list">
 		<li>one</li>
 		<li>two</li>
