update file path for image

--- a/week-4/d1-browser-basics/lecture-demos/script-demo/index.html
+++ b/week-4/d1-browser-basics/lecture-demos/script-demo/index.html
@@ -6,7 +6,7 @@
 	<!-- SOLUTION #4: use async defer to delay execution-->
 	<!-- <script async defer type="text/javascript" src="index.js"></script> -->
 
-
+	<title>Script Placement Demo</title>
 </head>
 <body id="body">
 	<h1  id="header">hello world</h1>
