--- a/week-4/d1-browser-basics/lecture-demos/dom-demo/index.html
+++ b/week-4/d1-browser-basics/lecture-demos/dom-demo/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
 
-	<title>DOM DEMO</title>
+	<title>DOM Demo</title>
 </head>
 <body>
 	<h1 id="header">Document Object Model</h1>
 	
+	<h2>My List</h2>
 	<ul id="my-list">
 		<li>one</li>
 		<li>two</li>
