--- a/week-4/d3-event-handling/warmup-browser-basics/index.html
+++ b/week-4/d3-event-handling/warmup-browser-basics/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="./index.css">
-	<script src="./your-code.js"></script>
+	<script src="./solution.js"></script>
 	<title>Browser Basics Warmup</title>
 </head>
 <body>
