update context and oop lecture

--- a/week-4/d1-browser-basics/lecture-demos/script-demo/index.html
+++ b/week-4/d1-browser-basics/lecture-demos/script-demo/index.html
@@ -5,6 +5,7 @@
 
 	<!-- SOLUTION #4: use async defer to delay execution-->
 	<!-- <script async defer type="text/javascript" src="index.js"></script> -->
+	<!-- <script defer type="text/javascript" src="index-2.js"></script> -->
 
 	<title>Script Placement Demo</title>
 </head>
