--- a/week-4/d4-json-and-storage/warmup-event-handling/index.html
+++ b/week-4/d4-json-and-storage/warmup-event-handling/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="./index.css">
-	<script src="./your-code.js"></script>
+	<script src="./solution.js"></script>
 	<title>JS Events Warmup</title>
 </head>
 <body>
@@ -11,6 +11,8 @@
 		<h2>Your Items:</h2>
 		<ul id="todo-list"></ul>
 	</section>
+
+	<ul id="errors"></ul>
 
 	<form id="todo-form">
 		<input type="text" id="user-input" placeholder="Enter a new todo item...">
