reset practice problems

--- a/week-5/d4-es6-modules/lecture-notes/es6-modules/index.html
+++ b/week-5/d4-es6-modules/lecture-notes/es6-modules/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
 	<script type="module" src="./src/index.js"></script>
+
+	<!-- <script src="./src/animal.js"></script>
+	<script src="./src/shelter.js"></script>
+	<script src="./src/index.js"></script> -->
+	
 	<title>ES6 MODULES DEMO</title>
 </head>
 <body>
