--- a/week-4/d1-browser-basics/lecture-demos/script-demo/index.html
+++ b/week-4/d1-browser-basics/lecture-demos/script-demo/index.html
@@ -3,9 +3,9 @@
 <head>
 	<script type="text/javascript" src="index.js"></script>
 
-	<!-- SOLUTION #4: use async defer to delay execution-->
-	<!-- <script async defer type="text/javascript" src="index.js"></script> -->
+	<!-- SOLUTION #4: use defer to delay execution-->
 	<!-- <script defer type="text/javascript" src="index-2.js"></script> -->
+	<!-- <script async defer type="text/javascript" src="index.js"></script> -->
 
 	<title>Script Placement Demo</title>
 </head>
