--- a/week-4/d1-browser-basics/lecture-demos/dom-demo/index.html
+++ b/week-4/d1-browser-basics/lecture-demos/dom-demo/index.html
@@ -7,11 +7,21 @@
 <body>
 	<h1 id="header">Document Object Model</h1>
 	
-	<h2>My List</h2>
-	<ul id="my-list">
-		<li>one</li>
-		<li>two</li>
-		<li>three</li>
+	<h2 id="number-header">Number List</h2>
+
+	<ul id="number-list">
+		<li class="number-list-item">one</li>
+		<li class="number-list-item">two</li>
+		<li class="number-list-item">three</li>
 	</ul>
+
+	<h2 id="color-header">Color List</h2>
+
+	<ul id="color-list">
+		<li class="color-list-item">blue</li>
+		<li class="color-list-item">red</li>
+		<li class="color-list-item">green</li>
+	</ul>
+
 </body>
 </html>
