update d2-element-selection lecture code

--- a/week-4/d2-element-selection/lecture-demos/create-el-demo/index.html
+++ b/week-4/d2-element-selection/lecture-demos/create-el-demo/index.html
@@ -10,7 +10,6 @@
 <body id="body">
 
 	<header id="my-header">
-		<!-- <label for="">hex/lloooooooooo</label> -->
 		<!-- <h1>Hello World</h1> -->
 	</header>
 	
@@ -32,6 +31,8 @@
 		<li class="number__item">Three</li> -->
 	</ul>
 
+
+	<!-- <div>Hello <span>Alissa</span></div> -->
 
 </body>
 
