--- a/week-4/d2-element-selection/lecture-demos/update-el-demo/index.html
+++ b/week-4/d2-element-selection/lecture-demos/update-el-demo/index.html
@@ -8,6 +8,11 @@
 
 <body id="body">
 
+	<!-- <header id="other-header">
+		<h1>Woohoo</h1>
+	</header> -->
+
+	
 	<header id="my-header">
 		<h1>Hello World</h1>
 	</header>
@@ -29,6 +34,19 @@
 		<li class="number__item">One</li>
 		<li class="number__item">Two</li>
 		<li class="number__item">Three</li>
+	</ul>
+
+
+
+
+
+
+	<label>Animal list</label>
+
+	<ul id="animals">
+		<li class="animal__item">dogs</li>
+		<li class="animal__item">cats</li>
+		<!-- <li class="animal__item">pony</li> -->
 	</ul>
 
 
