--- a/week-4/d1-browser-basics/lecture-demos/script-demo/index.html
+++ b/week-4/d1-browser-basics/lecture-demos/script-demo/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<script type="text/javascript" src="index.js"></script>
+	<script type="text/javascript" src="./index.js"></script>
 
 	<!-- SOLUTION #4: use defer to delay execution-->
-	<!-- <script defer type="text/javascript" src="index-2.js"></script> -->
+	<!-- <script defer type="text/javascript" src="index.js"></script> -->
 	<!-- <script async defer type="text/javascript" src="index.js"></script> -->
 
 	<title>Script Placement Demo</title>
 </head>
-<body id="body">
+<body id="my-body">
 	<h1  id="header">hello world</h1>
 
 	<ul>
