--- a/week-4/d3-event-handling/warmup-browser-basics/index.html
+++ b/week-4/d3-event-handling/warmup-browser-basics/index.html
@@ -10,7 +10,7 @@
 
 	<ul class="squares">
 		<li id="blue-item">
-			<label>Blue Square</label>
+			<LABEL>Blue Square</LABEL>
 		</li>
 		<li id="red-item">
 			<label>Red Square</label>
