--- a/week-5/d4-es6-modules/mini-project/index.html
+++ b/week-5/d4-es6-modules/mini-project/index.html
@@ -1,8 +1,10 @@
 <html>
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- using commonJS modules -->
+	<!-- <script src="./game.js"></script> -->
+	<!-- <script src="./program.js"></script> -->
+
 	<script type="module" src="program.js"></script>
 	<title>Browser</title>
 </head>
@@ -10,7 +12,6 @@
 <body>
 	<button id="button">Start Game</button>
 	<div id="message"></div>
-	<script type="module" src="./program.js"></script>
 </body>
 
 </html>
